--- a/index.html
+++ b/index.html
@@ -7,6 +7,45 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hello World!</div>
+    <div class="content">
+        <section class="menu">
+            <div class="menu__user">
+                <div class="menu__user_img">
+                    <img src="" alt="user_foto">
+                </div>
+                <div class="menu__user_name">
+                    Sergey
+                </div>
+            </div>
+            <div class="menu__nav">
+                <div class="menu__nav_home">
+                    Home
+                </div>
+                <div class="menu__nav_chat">
+                    Chat
+                </div>
+                <div class="menu__nav_contact">
+                    Contact
+                </div>
+                <div class="mune__nav_notifications">
+                    Notifications
+                </div>
+                <div class="menu__nav_calendar">
+                    Calendar
+                </div>
+                <div class="menu__nav_settings">
+                    Settings
+                </div>
+            </div>
+            <div class="menu__log">
+                <div class="menu__log_img">
+                    <img src="" alt="log_out">
+                </div>
+                <div class="menu__log_txt">
+                    log out
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
