menu style scss

--- a/index.html
+++ b/index.html
@@ -4,48 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Social network</title>
 </head>
 <body>
-    <div class="content">
-        <section class="menu">
-            <div class="menu__user">
-                <div class="menu__user_img">
-                    <img src="" alt="user_foto">
+    <div class="wraper">
+        <div class="container">
+            <div class="menu">
+                <div class="menu-user">
+                    <img src="./img/ava_default.jpg" alt="user_foto"" class="menu-user__foto">
+                    <div class="menu-user__name">Sergey Rimsha</div>
                 </div>
-                <div class="menu__user_name">
-                    Sergey
+                <div class="menu-nav">
+                    <div class="menu-nav__item menu-nav__profile">
+                        <img class="menu-nav__item_img" src="./img/icons_menu/grid_icon.svg" alt="profile_img">
+                        <div class="menu-nav__item_txt">profile</div>
+                    </div>
+                    <div class="menu-nav__item menu-nav__messenger">
+                        <img class="menu-nav__item_img" src="./img/icons_menu/chat_icon.svg" alt="home_img">
+                        <div class="menu-nav__item_txt">messenger</div>
+                    </div>
+                    <div class="menu-nav__item menu-nav__users">
+                        <img class="menu-nav__item_img" src="./img/icons_menu/person_icon.svg" alt="home_img">
+                        <div class="menu-nav__item_txt">users</div>
+                    </div>
+                    <div class="menu-nav__item menu-nav__news">
+                        <img class="menu-nav__item_img" src="./img/icons_menu/bell_icon.svg" alt="home_img">
+                        <div class="menu-nav__item_txt">news</div> 
+                    </div>
+                    <div class="menu-nav__item menu-nav__calendar">
+                        <img class="menu-nav__item_img" src="./img/icons_menu/calendar_icon.svg" alt="home_img">
+                        <div class="menu-nav__item_txt">Calendar</div> 
+                    </div>
+                    <div class="menu-nav__item menu-nav__settings">
+                        <img class="menu-nav__item_img" src="./img/icons_menu/settings_icon.svg" alt="home_img">
+                        <div class="menu-nav__item_txt">Settings</div> 
+                    </div>
+                </div>
+                <div class="menu-auth">
+                    <div class="menu-auth__wraper">
+                        <img class="menu-auth__wraper_img" src="./img/icons_menu/power_icon.svg" alt="auth_icon">
+                        <div class="menu-auth__wraper_text">log out</div>
+                    </div>
                 </div>
             </div>
-            <div class="menu__nav">
-                <div class="menu__nav_home">
-                    Home
-                </div>
-                <div class="menu__nav_chat">
-                    Chat
-                </div>
-                <div class="menu__nav_contact">
-                    Contact
-                </div>
-                <div class="mune__nav_notifications">
-                    Notifications
-                </div>
-                <div class="menu__nav_calendar">
-                    Calendar
-                </div>
-                <div class="menu__nav_settings">
-                    Settings
-                </div>
+            <div class="content">
+                hey
             </div>
-            <div class="menu__log">
-                <div class="menu__log_img">
-                    <img src="" alt="log_out">
-                </div>
-                <div class="menu__log_txt">
-                    log out
-                </div>
-            </div>
-        </section>
+        </div>
     </div>
 </body>
 </html>
