--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                     </div>
                 </div>
             </section>
+            <div class="profile">
+                <div class="user">
+                    <div class="user__foto">
+                        <img src="./img/ava_default.jpg" alt="ava_default">
+                    </div>
+                    <div class="user__info">
+                    </div>
+                </div>
+            </div>
             <section class="component">
                 hey
                 
