profile_user-name

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
                     <div class="user__foto">
                         <img src="./img/ava_default.jpg" alt="ava_default">
                     </div>
+                    <div class="user__name-wraper">
+                        <div class="user__first-name">Sergey</div>
+                        <div class="user__last-name">Rimsha</div>
+                    </div>
                     <div class="user__info">
+                        
                     </div>
                 </div>
             </div>
